/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package es.sabbia_scatola;

import java.util.ArrayList;

/**
 *
 * @author Alessandro
 */
public class DatiCondivisi {

    private int lungS, altS;   //Attributi che definiscono le dimensioni dello schermo (lunghezza e altezza).
    private int numRighe, numColonne;   //Attributi che identificano i numeri di righe e colonne che costituiscono la canvas.    
    private Sensore s;   //Creazione del sensore
    private Scatole[] array;   //Creazione delle scatole

    /**
     *
     * Metodo costruttore con parametri
     *
     */
    public DatiCondivisi(int lungS, int altS) {
        s = new Sensore();
        this.lungS = lungS;
        this.altS = altS;
        this.numColonne=2;
        this.numRighe=1;

        array = new Scatole[2];
        
    }
    
    /**
     *
     * Metodo costruttore senza parametri
     *
     */
    public DatiCondivisi() {
        s = new Sensore();
        array = new Scatole[2];
        this.numColonne=2;
        this.numRighe=1;
    }

    public void setS(Sensore s) {
        this.s = s;
    }

    public Sensore getS() {
        return s;
    }

    public int getNumRighe() {
        return numRighe;
    }

    public void setNumRighe(int numRighe) {
        this.numRighe = numRighe;
    }

    public int getNumColonne() {
        return numColonne;
    }

    public void setNumColonne(int numColonne) {
        this.numColonne = numColonne;
    }

    public float getInclinazioneX() {
        return s.getInclinazioneX();
    }
     public float getInclinazioneY() {
        return s.getInclinazioneY();
    }
    
    public void setInclinazioneX(float inclinazione) {
        s.setInclinazioneX(inclinazione);
    }
    
    public void setInclinazioneY(float inclinazione) {
        s.setInclinazioneY(inclinazione);
    }

    public int getLungS() {
        return lungS;
    }

    public int getAltS() {
        return altS;
    }

    public void setLungS(int lungS) {
        this.lungS = lungS;
    }

    public void setAltS(int altS) {
        this.altS = altS;
    }

    public Scatole[] getArray() {
        return array;
    }

    public void setArray(Scatole[] array) {
        this.array = array;
    }
}
