@startuml


class Pallina {

'@brief: indica la posizione sull'asse delle ascisse della pallina'
- float posX

'@brief: indica la posizione sull'asse delle ordinate della pallina'
- float posY

'@brief: indica la velocità sull'asse delle ascisse della pallina'
- float velX

'@brief: indica la velocità sull'asse delle ordinate della pallina'
- float velY

'@brief: indica la direzione sull'asse delle ascisse della pallina'
- int direzioneX

'@brief: indica la direzione sull'asse delle ordinate della pallina'
- int direzioneY

'@brief: indica il raggio della pallina'
- int raggio

'@brief: oggetto della classe DatiCondivisi'
- DatiCondivisi ptrDati

'@brief: contatore usato per gestire la velocita' della pallina'
- int cont

'@brief: oggetto di tipo scatola usato per la gestione della pallina
- Scatole ptrScatola

'@brief: Metodo che aggiorna la posizione e la velocità della pallina'
+ void aggiornaInfo(int velX,int velY)

'@brief: Metodo che permette alla pallina di muoversi'
+ void move(int idBox)

'@brief: Metodo che aumenta la velocita' della pallina sull'asse delle ascisse'
+ void incrementaVelocitaX()

'@brief: Metodo che aumenta la velocita' della pallina sull'asse delle ordinate'
+ void incrementaVelocitaY()

'@brief: Metodo che diminuisce la velocita' della pallina sull'asse delle ascisse'
+ void decremantaVelocitaX()

'@brief: Metodo che diminuisce la velocita' della pallina sull'asse delle oridnate'
+ void decremantaVelocitaY()

'@brief: Metodo che mostra le informazione della pallina (usato per il debug)'
+ void visualizzaInfo()
}



class Sabbia {

'@brief: identifica la quantità di sabbia che esce dalla scatola in seguito al movimento'
- float sabbiaSpostata

'@brief: array di scatole presenti nell'esecuzione
- Scatole array[]

'@brief: oggetto della classe DatiCondivisi'
- DatiCondivisi ptrDati

'@brief: Metodo che muove la sabbia in seguito all'inclinazione'
+ void move()
}

class Sensore {
'@brief: Definisce l'inclinazione del sistema sull'asse delle ascisse'
- float inclinazioneX

'@brief: Definisce l'inclinazione del sistema sull'asse delle ordinate'
- float inclinazioneY

'@brief: Frame con slider e bottoni'
- JFrame frame

'@brief: Nel progetto non esiste, nella realta' tutti gli eventi sono nel costruttore'
+ void eventi()

}



class Scatole {

'@brief: Definisce l'altezza della scatola'
- int altB

'@brief: Definisce la profondita' della scatola'
- int profB

'@brief: Definisce la lunghezza della scatola'
- int lungB

'@brief: Oggetto della classe Sabbia
- Sabbia sand

'@brief: indica se la scatola e' piena 
- boolean : piena

'@brief: Oggetto della classe Pallina
- Pallina ball

'@brief: quantita' dei sabbia presente nella scatola
- float sandQuantity

'@brief: Percentuale di riempimento della scatola espressa in percentuali
- int perSabbia

'@brief: Identificatore della scatola
- int id

'@brief: Flag che indica la presenza della pallina o meno nella scatola
- boolean ballTF

'@brief: oggetto della classe DatiCondivisi'
- DatiCondivisi ptrDati

'@brief: Quantita' di sabbia che esce dalla scatola in seguito al movimento'
- float sabbiaPersa

'@brief: Identificatore della scatola in cui la sabbia e la pallina (presenti nella scatola al momento) devono essere spostati
- int idTarget

'@brief: Metodo usato per richiamare il metodo move della classe Pallina
+ void moveBall()

'@brief: Metodo usato per richiamare il metodo move della classe Sabbia
+ void move()

'@brief: Metodo usato per proporzione'
+ void valueSandPixel()

}



class DatiCondivisi {
'@brief: semaforo per interrompere il thread pallina quando non in funzione
-Semaphore eseguiPallina

'@brief: lunghezza dello schermo
-int lungS 

'@brief: altezza dello schermo
-int altS

'@brief: gestisce lo spostamento della pallina
-boolean sposta

'@brief: Insieme di scatole'
-Scatole[] array

'@brief: oggetto della classe sensore
-Sensore s

'@brief: percentuale di sabbia contenuta nella scatola'
-int perSabbia

'@brief: rappresenta il numero di righe della scatola
-int numRighe 

'@brief: rappresenta il numero di colonne della scatola
-int numColonne

}

class ThScatola{
'@brief: oggetto della classe DatiCondivisi'
- DatiCondivisi ptrDati

'@brief: Insieme di scatole'
-Scatole[] array

'@brief: Identificatore della scatola a cui il thread e' associato'
-int id

'@brief: Metodo run del thread che raccoglie le informazioni delle altre classi e le organizza per disegnarle'
+ void run()

'@brief: Metodo che svuota una scatola impostando i valori di default di una scatola vuota'
+ void cambioSabbia()

'@brief: Metodo che aggiorna le informazioni della sabbia in una scatola'
+ void aggiornaSabbia()

'@brief: Metodo che gesstisce la sabbia verso la scatola di sinistra'
+ void gestioneSabbiaVersoSinistra()

'@brief: Metodo che gesstisce la sabbia verso la scatola di destra'
+ void gestioneSabbiaVersoDestra()
}

class ThPallina{
'@brief: oggetto della classe DatiCondivisi'
- DatiCondivisi ptrDati

'@brief: oggetto della classe Scatole'
- Scatole ptrScatole

'@brief: Insieme di scatole'
-Scatole[] array

'@brief: Metodo run del thread che raccoglie le informazioni dalle altre classi e gestisce la pallina in modo autonomo'
+ void run()

'@brief: Metodo che permette di spostare la pallina nella scatola di destra'
+ void GestionePallinaVersoDestra()

'@brief: Metodo che permette di spostare la pallina nella scatola di sinistra'
+ void GestionePallinaVersoSinistra()

'@brief: Metodo che notifica lo spostamento della pallina nella varie scatole'
+ void cambioPallina()
}



Sensore "1" -- "1" DatiCondivisi : FornisceMisurazioni > 
Sabbia "1" --o "1" Scatole : contenuta > 
Pallina "1" --o "1" Scatole : contenuta >
DatiCondivisi "1" -- "1" Scatole : interagisce >
DatiCondivisi "1" -- "1" ThScatola : gestisceInformazioni <
DatiCondivisi "1" -- "1" ThPallina : gestisceInformazioni <




@enduml
